--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ huggingface = [
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0",
     "peft>=0.7.1,!=0.11.0",
-    "protobuf<4.0.0",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "unsloth[triton]",
@@ -391,7 +391,7 @@ colab-new = [
     "psutil",
     "wheel>=0.42.0",
     "numpy",
-    "protobuf<4.0.0",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "bitsandbytes>=0.45.5",
@@ -403,7 +403,7 @@ colab-no-deps = [
     "peft>=0.7.1",
     "xformers",
     "bitsandbytes>=0.45.5",
-    "protobuf<4.0.0",
+    "protobuf",
 ]
 colab = [
     "unsloth[cu121]",
