--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0",
     "peft>=0.7.1,!=0.11.0",
-    "protobuf<4.0.0",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "diffusers",
@@ -71,7 +71,7 @@ huggingface = [
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0",
     "peft>=0.7.1,!=0.11.0",
-    "protobuf<4.0.0",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "diffusers",
@@ -314,7 +314,7 @@ colab-new = [
     "psutil",
     "wheel>=0.42.0",
     "numpy",
-    "protobuf<4.0.0",
+    "protobuf",
     "huggingface_hub",
     "hf_transfer",
     "bitsandbytes>=0.43.3",
@@ -326,7 +326,7 @@ colab-no-deps = [
     "peft>=0.7.1",
     "xformers<0.0.27",
     "bitsandbytes>=0.43.3",
-    "protobuf<4.0.0",
+    "protobuf",
 ]
 colab = [
     "unsloth[cu121]",
