--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
     "Programming Language :: Python",
 ]
 dependencies = [
-    "unsloth_zoo>=2025.7.2",
+    "unsloth_zoo>=2025.7.4",
     "torch>=2.4.0",
     "xformers>=0.0.27.post2",
     "bitsandbytes",
@@ -30,8 +30,8 @@ dependencies = [
     "triton-windows ; platform_system == 'Windows'",
     "packaging",
     "tyro",
-    "transformers>=4.51.3,!=4.47.0,!=4.52.0,!=4.52.1,!=4.52.2",
-    "datasets>=3.4.1",
+    "transformers>=4.51.3,!=4.47.0,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0",
+    "datasets>=3.4.1,<4.0.0",
     "sentencepiece>=0.2.0",
     "tqdm",
     "psutil",
