--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ huggingface = [
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0",
     "peft>=0.7.1,!=0.11.0",
     "protobuf",
-    "huggingface_hub",
+    "huggingface_hub>=0.34.0",
     "hf_transfer",
     "unsloth[triton]",
 ]
@@ -392,7 +392,7 @@ colab-new = [
     "wheel>=0.42.0",
     "numpy",
     "protobuf",
-    "huggingface_hub",
+    "huggingface_hub>=0.34.0",
     "hf_transfer",
     "bitsandbytes>=0.45.5",
     "unsloth[triton]",
