--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ huggingface = [
     "accelerate>=0.34.1",
     "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0",
     "peft>=0.7.1,!=0.11.0",
+    "protobuf",
     "huggingface_hub>=0.34.0",
     "hf_transfer",
     "unsloth[triton]",
