--- a/pyproject.toml
+++ b/pyproject.toml
@@ -743,12 +743,12 @@ rocmonlytorch280 = [
 ]
 rocm-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version == '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
 ]
 rocm-mi-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version == '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
     "packaging ; platform_system == 'Linux'",
     "ninja ; platform_system == 'Linux'",
