--- a/pyproject.toml
+++ b/pyproject.toml
@@ -743,12 +743,12 @@ rocmonlytorch280 = [
 ]
 rocm-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/42263db84ad647d4/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl#sha256=42263db84ad647d48e5aacb258d3a22da3b5d0783e5f03d1e38f365825e1fdc7 ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
 ]
 rocm-mi-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://github.com/bitsandbytes-foundation/bitsandbytes/releases/download/continuous-release_main/bitsandbytes-1.33.7.preview-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/42263db84ad647d4/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl#sha256=42263db84ad647d48e5aacb258d3a22da3b5d0783e5f03d1e38f365825e1fdc7 ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
     "packaging ; platform_system == 'Linux'",
     "ninja ; platform_system == 'Linux'",
