--- a/pyproject.toml
+++ b/pyproject.toml
@@ -743,12 +743,12 @@ rocmonlytorch280 = [
 ]
 rocm-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/manual/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/58e54b665bdece11/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl#sha256=58e54b665bdece110efdc03c9bb5944d954b1fbe9322e867df7340e6eb9ac6fa ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
 ]
 rocm-mi-torch280 = [
     "unsloth[huggingface]",
-    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/manual/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
+    "bitsandbytes @ https://electron271.github.io/bitsandbytes-index/permalinks/58e54b665bdece11/bitsandbytes-0.48.0.dev0-py3-none-manylinux_2_24_x86_64.whl#sha256=58e54b665bdece110efdc03c9bb5944d954b1fbe9322e867df7340e6eb9ac6fa ; platform_system == 'Linux' and python_version >= '3.9' and platform_machine == 'x86_64'",
     "unsloth[rocmonlytorch280]",
     "packaging ; platform_system == 'Linux'",
     "ninja ; platform_system == 'Linux'",
