--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,18 +37,18 @@ triton = [
 ]
 
 huggingface = [
-    "unsloth_zoo>=2025.9.11",
+    "unsloth_zoo>=2025.9.12",
     "packaging",
     "tyro",
     "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "datasets>=3.4.1,<4.0.0",
+    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
     "sentencepiece>=0.2.0",
     "tqdm",
     "psutil",
     "wheel>=0.42.0",
     "numpy",
     "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0",
+    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
     "peft>=0.7.1,!=0.11.0",
     "protobuf",
     "huggingface_hub>=0.34.0",
@@ -453,11 +453,11 @@ colab-ampere-torch220 = [
     "flash-attn>=2.6.3",
 ]
 colab-new = [
-    "unsloth_zoo>=2025.9.11",
+    "unsloth_zoo>=2025.9.12",
     "packaging",
     "tyro",
-    "transformers>=4.51.3,!=4.47.0,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "datasets>=3.4.1,<4.0.0",
+    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
+    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
     "sentencepiece>=0.2.0",
     "tqdm",
     "psutil",
@@ -471,7 +471,7 @@ colab-new = [
 ]
 colab-no-deps = [
     "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0",
+    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
     "peft>=0.7.1",
     "xformers",
     "bitsandbytes>=0.45.5",
