--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "unsloth"
 dynamic = ["version"]
-description = "2-5X faster LLM finetuning"
+description = "2-5X faster training, reinforcement learning & finetuning"
 readme = "README.md"
 requires-python = ">=3.9,<3.14"
 license = "Apache-2.0"
@@ -20,31 +20,34 @@ maintainers = [
 ]
 classifiers = [
     "Programming Language :: Python",
+    "Environment :: GPU",
+    "Environment :: GPU :: NVIDIA CUDA",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
     "unsloth_zoo>=2025.10.1",
-    "torch>=2.4.0",
-    "xformers>=0.0.27.post2",
-    "bitsandbytes",
-    "triton>=3.0.0 ; platform_system == 'Linux'",
-    "triton-windows ; platform_system == 'Windows'",
+    "wheel>=0.42.0",
     "packaging",
-    "tyro",
-    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
-    "sentencepiece>=0.2.0",
+    "torch>=2.4.0",
+    "torchvision",
+    "numpy",
     "tqdm",
     "psutil",
-    "wheel>=0.42.0",
-    "numpy",
-    "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
-    "peft>=0.7.1,!=0.11.0",
+    "tyro",
     "protobuf",
+    "xformers>=0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
+    "bitsandbytes",
+    "triton>=3.0.0 ; ('linux' in sys_platform)",
+    "triton-windows ; (sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
+    "sentencepiece>=0.2.0",
+    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
+    "accelerate>=0.34.1",
+    "peft>=0.7.1,!=0.11.0",
     "huggingface_hub>=0.34.0",
     "hf_transfer",
     "diffusers",
-    "torchvision",
+    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
+    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
 ]
 
 [tool.setuptools.dynamic]
@@ -59,116 +62,116 @@ exclude = ["images*", "tests*", "kernels/moe*"]
 [project.optional-dependencies]
 huggingface = [
     "unsloth_zoo>=2025.10.1",
+    "wheel>=0.42.0",
     "packaging",
-    "tyro",
-    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
-    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
-    "sentencepiece>=0.2.0",
+    "torchvision",
+    "numpy",
     "tqdm",
     "psutil",
-    "wheel>=0.42.0",
-    "numpy",
-    "accelerate>=0.34.1",
-    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
-    "peft>=0.7.1,!=0.11.0",
+    "tyro",
     "protobuf",
+    "sentencepiece>=0.2.0",
+    "datasets>=3.4.1,!=4.0.*,!=4.1.0",
+    "accelerate>=0.34.1",
+    "peft>=0.7.1,!=0.11.0",
     "huggingface_hub>=0.34.0",
     "hf_transfer",
     "diffusers",
-    "torchvision",
+    "transformers>=4.51.3,!=4.52.0,!=4.52.1,!=4.52.2,!=4.52.3,!=4.53.0,!=4.54.0,!=4.55.0,!=4.55.1,<=4.56.2",
+    "trl>=0.7.9,!=0.9.0,!=0.9.1,!=0.9.2,!=0.9.3,!=0.15.0,!=0.19.0,<=0.23.0",
 ]
 base = [
     "unsloth[huggingface]",
 ]
 cu118only = [
-    "xformers==0.0.22.post7",
+    "xformers==0.0.22.post7 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121only = [
-    "xformers==0.0.22.post7",
+    "xformers==0.0.22.post7 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch211 = [
-    "xformers==0.0.23",
+    "xformers==0.0.23 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch211 = [
-    "xformers==0.0.23",
+    "xformers==0.0.23 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch212 = [
-    "xformers==0.0.23.post1",
+    "xformers==0.0.23.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch212 = [
-    "xformers==0.0.23.post1",
+    "xformers==0.0.23.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch220 = [
-    "xformers==0.0.24",
+    "xformers==0.0.24 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch220 = [
-    "xformers==0.0.24",
+    "xformers==0.0.24 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch230 = [
-    "xformers==0.0.27",
+    "xformers==0.0.27 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch230 = [
-    "xformers==0.0.27",
+    "xformers==0.0.27 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch240 = [
-    "xformers==0.0.27.post2",
+    "xformers==0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch240 = [
-    "xformers==0.0.27.post2",
+    "xformers==0.0.27.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch250 = [
-    "xformers==0.0.28.post2",
+    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch250 = [
-    "xformers==0.0.28.post2",
+    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu124onlytorch250 = [
-    "xformers==0.0.28.post2",
+    "xformers==0.0.28.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch251 = [
-    "xformers==0.0.29.post1",
+    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu121onlytorch251 = [
-    "xformers==0.0.29.post1",
+    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu124onlytorch251 = [
-    "xformers==0.0.29.post1",
+    "xformers==0.0.29.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch260 = [
-    "xformers==0.0.29.post3",
+    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu124onlytorch260 = [
-    "xformers==0.0.29.post3",
+    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu126onlytorch260 = [
-    "xformers==0.0.29.post3",
+    "xformers==0.0.29.post3 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch270 = [
-    "xformers==0.0.30",
+    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu126onlytorch270 = [
-    "xformers==0.0.30",
+    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu128onlytorch270 = [
-    "xformers==0.0.30",
+    "xformers==0.0.30 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch271 = [
-    "xformers==0.0.31.post1",
+    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu126onlytorch271 = [
-    "xformers==0.0.31.post1",
+    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu128onlytorch271 = [
-    "xformers==0.0.31.post1",
+    "xformers==0.0.31.post1 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118onlytorch280 = [
-    "xformers==0.0.32.post2",
+    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu126onlytorch280 = [
-    "xformers==0.0.32.post2",
+    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu128onlytorch280 = [
-    "xformers==0.0.32.post2",
+    "xformers==0.0.32.post2 ; ('linux' in sys_platform or sys_platform == 'win32') and (platform_machine == 'AMD64' or platform_machine == 'x86_64')",
 ]
 cu118 = [
     "unsloth[huggingface]",
@@ -341,9 +344,9 @@ colab-torch211 = [
     "unsloth[cu121onlytorch211]",
 ]
 flashattention = [
-    "packaging ; platform_system == 'Linux'",
-    "ninja ; platform_system == 'Linux'",
-    "flash-attn>=2.6.3 ; platform_system == 'Linux'",
+    "packaging ; 'linux' in sys_platform",
+    "ninja ; 'linux' in sys_platform",
+    "flash-attn>=2.6.3 ; 'linux' in sys_platform",
 ]
 colab-ampere-torch211 = [
     "unsloth[huggingface]",
